# SensorQualityClassifier

./: Dockerfile  README.md  app.py  pyproject.toml  template.py
.github/workflows/: main.yaml
config/: config.yml
research/: trials.ipynb
research/sensor_quality_model/: xgboost_model.pkl
saved_artifacts/: xgboost_model.pkl
sensorqualityclassifier/pipeline/: data_ingestion_pipeline.py  data_loading_pipeline.py  data_transform_and_loading_pipeline.py  data_validation_pipeline.py  inference_pipeline.py  model_training_pipeline.py
sensorqualityclassifier/utils/: logger.py
